--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,10 @@
      width: 100%;
      margin: 0 auto;
      padding-top: 160px;
-     background-color: #F5F5F5;
+     background-color: #F4EEEE;
  }
-/* header */
+
+ /* header */
  header {
      max-width: inherit;
      width: inherit;
@@ -20,7 +21,56 @@
      display: flex;
      z-index: 1;
  }
- .fa-bars{
+
+ .fa-bars {
+     color: #125806;
+     font-size: 55px;
+ }
+
+ /* section */
+ section {
+     width: 90%;
+     height: 720px;
+     margin: 0 auto;
+     padding: 90px 80px 206px 80px;
+     position: relative;
+ }
+
+ .section1_img {
+     width: 100%;
+     height: 100%;
+ }
+
+ .section1_text{
+    width: 584px;
+    height: 156px;
+    font-size: 40px;
+    color: #FDF50E;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+ }
+ .section2{
+    width: 90%;
+    margin: 0 auto;
+}
+h1{
+    width: 785px;
+    font-size: 40px;
     color: #125806;
-    font-size: 55px;
+    margin-bottom: 74px; 
+}
+.cards{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 28px;
+    align-content: space-between;
+    margin-bottom: 112px;
+}
+.card{
+    width: 30%;
+    height: 271px;
 }
