--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@
  }
 
  /* section */
- section {
+ .section1{
      width: 90%;
      height: 720px;
      margin: 0 auto;
@@ -73,4 +73,28 @@ h1{
 .card{
     width: 30%;
     height: 271px;
+}
+footer{
+    width: 100%;
+    height: 292px;
+    background-color: #ffffff;
+
+}
+.footer_logo{
+    padding: 52px 73px 78px 82px;
+    display: flex;
+    justify-content: space-between;
+    color: #413D3D;
+    
+}
+h3{
+    margin-bottom: 47px;
+    font-size: 20px;
+    font-weight: 700px;
+}
+.footer_text{
+    display: flex
+    font-size: 16px;
+    font-weight: 700px;
+   line-height: 20.79px; 
 }
