--- a/css/style.css
+++ b/css/style.css
@@ -80,12 +80,11 @@ footer{
     background-color: #ffffff;
 
 }
-.footer_logo{
+.footer_div{
     padding: 52px 73px 78px 82px;
     display: flex;
     justify-content: space-between;
     color: #413D3D;
-    
 }
 h3{
     margin-bottom: 47px;
@@ -93,7 +92,6 @@ h3{
     font-weight: 700px;
 }
 .footer_text{
-    display: flex
     font-size: 16px;
     font-weight: 700px;
    line-height: 20.79px; 
